tests/NormalTests/paczka1/fuzzy1/88707918.err
Error in line 4: mMx5S4b1I S996 74,6
Error in line 9: SQKP6G5DT A898 22,2
Error in line 3: uUMl1 A898 72,9
Error in line 14: uUMl1 S939 94,3
Error in line 15: uUMl1 A898 67,4
Error in line 21: xzgM S158 33,9
Error in line 33: mMx5S4b1I S996 62,6
Error in line 35: SQKP6G5DT S939 99,5
